# Universal-Privacy-Engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  README.md  RESEARCH_SCOPE.md  TESTNET_LAUNCH_CHECKLIST.md  TRUST_MODEL.md  USAGE.md  benchmarks.json  deploy-all.sh  launch_demo.sh  phase1.md  phase3.md  setup.sh  test_input.json  update.md  walkthrough.md
.github/ISSUE_TEMPLATE/: bug_report.md  circuit_vulnerability.md
.github/workflows/: ci.yml
adapters/aleo-leo/: program.json
adapters/aleo-leo/src/: main.leo
adapters/evm-contracts/: .env.example  DEPLOYMENT.md  README.md  foundry.toml  hardhat.config.js  package.json
adapters/evm-contracts/scripts/: deploy.ts  generate-test-proof.js  verify_onchain.ts
adapters/evm-contracts/src/: RWAOracle.sol  Verifier.sol
adapters/mina-o1js/: build_errors.txt  package.json  tsconfig.json
adapters/mina-o1js/src/: RWAOracle.ts
adapters/secret-network-cosmwasm/: Cargo.toml  build_errors.txt
adapters/secret-network-cosmwasm/src/: lib.rs
adapters/sp1/: Cargo.toml
adapters/sp1/src/: lib.rs
adapters/sp1/tests/: integration_test.rs
adapters/tee/: Cargo.toml
adapters/tee/src/: lib.rs
adapters/tee/tests/: integration_test.rs
adapters/zksync-solidity/: .env.example  hardhat.config.ts  package.json  tsconfig.json
adapters/zksync-solidity/artifacts-zk/contracts/IVerifier.sol/: IVerifier.dbg.json  IVerifier.json
adapters/zksync-solidity/artifacts-zk/contracts/RWAOracle.sol/: RWAOracle.json
adapters/zksync-solidity/artifacts-zk/contracts/Verifier.sol/: Groth16Verifier.json
adapters/zksync-solidity/cache-zk/: solidity-files-cache.json
adapters/zksync-solidity/contracts/: IVerifier.sol  RWAOracle.sol
adapters/zksync-solidity/scripts/: deploy.ts
apps/notary-worker/: package.json  tsconfig.json  wrangler.toml
apps/notary-worker/src/: index.ts
apps/web/: README.md  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/.next/: trace
apps/web/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/vendor-chunks/: @adraffy.js  @noble.js  @swc.js  ethers.js  lucide-react.js  next-themes.js  next.js  styled-jsx.js
apps/web/.next/static/chunks/: app-pages-internals.js  webpack.js
apps/web/.next/static/webpack/: e1d420736eaa14c1.webpack.hot-update.json  webpack.0a25ab3a03a3098b.hot-update.js  webpack.0a3e81ba1523aa4b.hot-update.js  webpack.13285caeb7f982eb.hot-update.js  webpack.14621d317e7e1c76.hot-update.js  webpack.2bc5183a41e5eae6.hot-update.js  webpack.406cb55da3506373.hot-update.js  webpack.4143893deea79c41.hot-update.js  webpack.56a9d849e1485375.hot-update.js  webpack.591731450ad44547.hot-update.js  webpack.614bdcad1d5980bb.hot-update.js  webpack.630317736f1f99d1.hot-update.js  webpack.691ee19fb26f0c5b.hot-update.js  webpack.6b4829f9caf1c449.hot-update.js  webpack.6eee3d29cb30ce54.hot-update.js  webpack.718d04522eafa4ee.hot-update.js  webpack.9246c005b03ac78a.hot-update.js  webpack.a18de2cb956e1bbf.hot-update.js  webpack.af41568129655c8d.hot-update.js  webpack.bc40ecf846b6dd4e.hot-update.js  webpack.c4c69efad8e76203.hot-update.js  webpack.c640515fbaf6cca1.hot-update.js  webpack.cbbbec06adb70258.hot-update.js  webpack.d857b8a78150a363.hot-update.js  webpack.e1d420736eaa14c1.hot-update.js  webpack.e1f46fb90490e37e.hot-update.js  (+3 more)
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Navbar.tsx  ProofCard.tsx  Terminal.tsx  ThemeToggle.tsx
apps/web/hooks/: useWallet.ts
apps/web/lib/: contracts.ts
cli/: Cargo.toml
cli/src/: main.rs
cli/src/mcp/: mod.rs  server.rs  tools.rs
contracts/oasis/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/oasis/cache/: solidity-files-cache.json
contracts/oasis/scripts/: demo_sapphire_flow.js  deploy.js  test-verify.js
contracts/oasis/src/: PrivatePayroll.sol
contracts/oasis/test/: PrivatePayroll.t.sol
contracts/templates/: UniversalVerifier.sol.tera
core/: .env.example  Cargo.toml
core/benches/: proof_bench.rs
core/src/: lib.rs  main.rs  rwa.rs
core/src/agent/: extractor.rs  mod.rs  orchestrator.rs  validator.rs
core/src/data_source/: builder.rs  error.rs  http.rs  mod.rs  provider.rs  zktls.rs
core/src/logging/: audit.rs  mod.rs
core/src/notary/: mod.rs
core/tests/: end_to_end_flow.rs  zktls_verification.rs
docs/: ARCHITECTURE.md  DELIVERABLES.md  DEMO.md  FUTURE_WORK.md  MULTI_CHAIN_REFERENCE.md  OASIS_DEMO_WALKTHROUGH.md  PROTOTYPE_VISION.md  RESEARCH_SCOPE.md  TASKS.md  TRUST_AND_LEGAL_ROADMAP.md  VERIFIER_GENERATION.md  VIDEO_OVERLAYS.txt  WALKTHROUGH.md  ZKTLS_RECORDED_PROOF.md  ZKTLS_TODO.md  benchmarks.md  flow.md  oasis_grant_notes.md  whitepaper.md
docs/archive/internal/: CLAUDE.md  DEMO.md
docs/grants/: stellar-grant-proposal.md
docs/integrations/: solana-quickstart.md
fixtures/zktls/: cert_chain.pem  metadata.json  response_body.json
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx
frontend/src/components/verify/: NetworkSelector.tsx  ProofPreview.tsx  SalaryDisplay.tsx  TransactionStatus.tsx  VerifyIncomeCard.tsx
frontend/src/hooks/: useNotaryAPI.ts  usePrivatePayroll.ts
frontend/src/lib/: chains.ts  contracts.ts  notary.ts  wagmi.ts
frontend/src/store/: useAppStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
guest/rwa_compliance/: Cargo.toml
guest/rwa_compliance/src/: main.rs
scripts/: Cargo.toml  generate_test_data.rs
verifiers/mantra/: Cargo.toml  deploy.sh
verifiers/mantra/src/: lib.rs
verifiers/solana/: deploy.sh
verifiers/solana/programs/rwa-verifier/: Cargo.toml
verifiers/solana/programs/rwa-verifier/src/: lib.rs
verifiers/stellar/: Cargo.toml  deploy.sh
verifiers/stellar/src/: lib.rs
(+52 files in other folders)
