[workspace]
members = [
    "core",
    "adapters/sp1",
    "cli",
]

# Enforce consistent Rust edition across all workspace members
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Universal Privacy Engine Contributors"]
license = "MIT OR Apache-2.0"

# Workspace-level dependency management for version consistency
# This ensures all members use the same versions of shared dependencies
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

# SP1 SDK - The primary ZK proving backend
# Note: Version may need adjustment based on latest SP1 releases
sp1-sdk = "1.0"
