[workspace]
members = [
    "core",
    "adapters/sp1",
    "adapters/tee",
    "cli",
    "guest/rwa_compliance",
    "scripts",
    "bin",
]

# Enforce consistent Rust edition across all workspace members
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Universal Privacy Engine Contributors"]
license = "MIT OR Apache-2.0"

# Workspace-level dependency management for version consistency
# This ensures all members use the same versions of shared dependencies
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }

# SP1 SDK - The primary ZK proving backend
# Note: Version may need adjustment based on latest SP1 releases
sp1-sdk = "3.0.0"

# Ed25519 signatures for TEE mock attestations
ed25519-dalek = "2.0"

# System metrics for benchmarking
sysinfo = "0.30"

# Time utilities for benchmarking
chrono = "0.4"

# HTTP client for data fetching
reqwest = { version = "0.11", features = ["json"] }

# Async trait support
async-trait = "0.1"

# Sensitive data handling
secrecy = "0.8"

# Template engine for code generation
tera = "1.19"
