[workspace]
members = [
    "core",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Universal Privacy Engine Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }

# HTTP client for data fetching
reqwest = { version = "0.11", features = ["json"] }

# Async trait support
async-trait = "0.1"

# Sensitive data handling
secrecy = "0.8"
