[package]
name = "universal-privacy-engine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization framework for ProofReceipt and other types
serde.workspace = true

# Efficient binary encoding for proof data
bincode.workspace = true

# Library-grade error handling with custom error types
thiserror.workspace = true

# Borsh for deterministic serialization (RWA types)
borsh = { version = "1.5", features = ["derive"] }

# Support for serializing large arrays (>32 bytes) with serde
serde-big-array = "0.5"

# Regex for data extraction and sanitization
regex = "1.10"

# SHA256 hashing for audit trail
sha2 = "0.10"

# JSON handling
serde_json = "1.0"

# HTTP client for data fetching
reqwest.workspace = true

# Async trait support
async-trait.workspace = true

# Async runtime
tokio.workspace = true

# Sensitive data handling
secrecy.workspace = true
hex = "0.4.3"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_bench"
harness = false
