[package]
name = "test-data-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-test-data"
path = "generate_test_data.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rs_merkle = "1.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
hex = "0.4"
