[package]
name = "upe-secret-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Universal Privacy Engine Contributors"]
description = "UPE adapter for Secret Network CosmWasm verification"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmwasm-schema = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
schemars = "0.8"
cw-storage-plus = "1.2"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-vm = "1.5"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
