[package]
name = "universal-privacy-engine-tee"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core abstraction layer - defines the PrivacyEngine trait
universal-privacy-engine-core = { path = "../../core" }

# Serialization inherited from core
serde.workspace = true
bincode.workspace = true

# Support for serializing large arrays (>32 bytes) with serde
serde-big-array = "0.5"

# Error handling
thiserror.workspace = true

# Ed25519 signatures for mock attestation
ed25519-dalek.workspace = true

# Random number generation for mock enclave ID
rand = "0.8"

# JSON serialization for metadata
serde_json = "1.0"

# SHA256 hashing for input digests
sha2 = "0.10"
