[package]
name = "rwa-compliance-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
# SP1 zkVM runtime
sp1-zkvm = "3.0.0"

# Borsh for deterministic serialization
borsh = { version = "1.5", default-features = false }

# Merkle tree verification
rs_merkle = { version = "1.4", default-features = false }

# SHA256 hashing
sha2 = { version = "0.10", default-features = false }

[profile.release]
# Optimize for size in zkVM environment
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Strip symbols to reduce ELF size
strip = true
