[package]
name = "rwa-verifier-mantra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "2.0"
cosmwasm-schema = "2.0"
cw-storage-plus = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

# ZK verification (placeholder - may need custom implementation)
# cw-zk-verify = "0.1"

[dev-dependencies]
cw-multi-test = "2.0"
