[package]
name = "rwa-verifier"
version = "0.1.0"
description = "RWA Compliance Verifier for Solana using SP1 Groth16 proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"

# SP1 Solana verification library
# Note: This crate may need to be added or implemented
# sp1-solana = "3.0"

# For now, we'll use a placeholder comment
# TODO: Add sp1-solana dependency when available

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
